<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeElement"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_middle"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Morty Smith" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:text="@string/status_label"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/status"
                app:layout_constraintStart_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:textColor="@color/black"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/barrier_text"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="Alive" />

            <TextView
                android:id="@+id/textViewSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:text="@string/species_label"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/species"
                app:layout_constraintStart_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:textColor="@color/black"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/barrier_text"
                app:layout_constraintTop_toBottomOf="@+id/status"
                tools:text="Human" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:text="@string/type_label"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/type"
                app:layout_constraintStart_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:textColor="@color/black"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/barrier_text"
                app:layout_constraintTop_toBottomOf="@+id/species"
                tools:text="Type" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:text="@string/gender_label"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/gender"
                app:layout_constraintStart_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:textColor="@color/black"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/barrier_text"
                app:layout_constraintTop_toBottomOf="@+id/type"
                tools:text="Male" />

            <TextView
                android:id="@+id/textViewOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:text="@string/origin_label"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/origin"
                app:layout_constraintStart_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:textColor="@color/black"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/barrier_text"
                app:layout_constraintTop_toBottomOf="@+id/gender"
                tools:text="Earth" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:text="@string/location_label"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/location"
                app:layout_constraintStart_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:textColor="@color/black"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/barrier_text"
                app:layout_constraintTop_toBottomOf="@+id/origin"
                tools:text="Earth" />

            <TextView
                android:id="@+id/textViewRelatedSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_middle"
                android:text="@string/related_series_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/barrier" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_episodes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_middle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRelatedSeries" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="image,location" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="textViewSpecies,textViewLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>