<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/launch_icon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/alfa_gray"
        android:ellipsize="end"
        android:maxLines="2"
        android:shadowColor="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        tools:text="Rick Sanchez" />

    <TextView
        android:id="@+id/textViewSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species_label"
        android:textSize="12sp"
        android:layout_margin="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/species"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:text="Human" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label"
        android:textSize="12sp"
        android:layout_margin="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/status"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/species"
        tools:text="Alive" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_label"
        android:layout_margin="4dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/gender"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/status"
        tools:text="Male" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textViewGender, textViewSpecies" />

</androidx.constraintlayout.widget.ConstraintLayout>